CSDEV/objects/Case.object
<CustomObject>
    <fields>
        <fullName>HAE_Purchase_Order_Number__c</fullName>
        <description>HAE:</description>
        <label>Purchase Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Qty_Ordered__c</fullName>
        <description>HAE:</description>
        <label>Qty Ordered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Qty_Received__c</fullName>
        <description>HAE:</description>
        <label>Qty Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Qty__c</fullName>
        <description>HAE:This contain the quantity</description>
        <label>Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Reason__c</fullName>
        <description>HAE:This field denotes reasons.</description>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Region2__c</fullName>
        <description>HAE:</description>
        <formula>TEXT(HAE_Operating_Unit__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Region__c</fullName>
        <description>HAE: This field is used to denote the region of the case.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Reopen_Reason__c</fullName>
        <description>HAE: Field to track reason for reopening the case.</description>
        <label>Reopen Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAE_Reopen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: This field is used to track is case is reopened.</description>
        <label>Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Request_Type__c</fullName>
        <description>HAE:This field denotes the requests</description>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Required_Delivery_Date__c</fullName>
        <description>HAE:</description>
        <label>Required Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HAE_Review_Status__c</fullName>
        <description>HAE: This field is used to track the review status.</description>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Review_Type__c</fullName>
        <description>HAE: Picklist value to capture type of review.</description>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Peer review</fullName>
                </value>
                <value>
                    <fullName>Quality Review</fullName>
                </value>
                <value>
                    <fullName>Escalation Review</fullName>
                </value>
                <value>
                    <fullName>Supervisor review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_SO_Number__c</fullName>
        <description>HAE text field for SO Number</description>
        <label>SO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Sales_Order_Number__c</fullName>
        <description>HAE: This field denotes the Sales Order Number of the associated Contract Request.</description>
        <label>Sales Order Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Sender_Email__c</fullName>
        <description>HAE: Sender Email is email address from where email-to-case is firing. Used to track web mail in process builder.</description>
        <formula>SuppliedEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Service_Providers__c</fullName>
        <description>HAE: This field is used to track the Service Providers.</description>
        <label>Service Providers</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HAE_Team__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Esker</fullName>
                </value>
                <value>
                    <fullName>Synthesis</fullName>
                </value>
                <value>
                    <fullName>Sanmina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Ship_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HAE:</description>
        <label>Ship To Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Transactional_Account</value>
            </filterItems>
            <filterItems>
                <field>Account.Bill_To_Ship_To_SFDC__c</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <filterItems>
                <field>$Source.HAE_Operating_Unit__c</field>
                <operation>equals</operation>
                <valueField>Account.HAE_Operating_Unit__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (CS Customer)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_Ship_To_Address__c</fullName>
        <description>HAE:</description>
        <formula>if(LEN(HAE_Ship_To_Account__r.ShippingStreet)&gt;0, HAE_Ship_To_Account__r.ShippingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(HAE_Ship_To_Account__r.ShippingCity)&gt;0, HAE_Ship_To_Account__r.ShippingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(HAE_Ship_To_Account__r.ShippingState)&gt;0, HAE_Ship_To_Account__r.ShippingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(HAE_Ship_To_Account__r.ShippingPostalCode)&gt;0, HAE_Ship_To_Account__r.ShippingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(HAE_Ship_To_Account__r.ShippingCountry) &gt;0, HAE_Ship_To_Account__r.ShippingCountry,&quot;&quot;)</formula>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Team__c</fullName>
        <description>HAE: This field is used to track the Internal Dept to which transfer would happen.</description>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PIR</fullName>
                </value>
                <value>
                    <fullName>MDM</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Dispatch Billing</fullName>
                </value>
                <value>
                    <fullName>HSS Billing</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Sales Team</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>3rd Party Service</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>IT Department</fullName>
                </value>
                <value>
                    <fullName>Freight Forwarders</fullName>
                </value>
                <value>
                    <fullName>Service provider</fullName>
                </value>
                <value>
                    <fullName>Software Support</fullName>
                </value>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>GHX</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Total_Cost__c</fullName>
        <description>HAE:</description>
        <label>Total Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Tracking_Number__c</fullName>
        <description>HAE:</description>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_UOM__c</fullName>
        <description>HAE:This field is responsible to denote unit of measure</description>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Warehouse__c</fullName>
        <description>HAE:</description>
        <label>Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EDC</fullName>
                </value>
                <value>
                    <fullName>GSO</fullName>
                </value>
                <value>
                    <fullName>ILO</fullName>
                </value>
                <value>
                    <fullName>CHO</fullName>
                </value>
                <value>
                    <fullName>CZO</fullName>
                </value>
                <value>
                    <fullName>STC</fullName>
                </value>
                <value>
                    <fullName>STZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>HAE_CS_ANZ_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS ANZ</value>
        </filters>
        <label>CS ANZ Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_AT_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS AT</value>
        </filters>
        <label>CS AT Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_BE_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS BE</value>
        </filters>
        <label>CS BE Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_CH_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS CH</value>
        </filters>
        <label>CS CH Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_CZ_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS CZ</value>
        </filters>
        <label>CS CZ Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_DE_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS DE</value>
        </filters>
        <label>CS DE Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_FR_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS FR</value>
        </filters>
        <label>CS FR Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_GHXEU_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS GHXEU</value>
        </filters>
        <label>CS GHXEU Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_GHXNA_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS GHXNA</value>
        </filters>
        <label>CS GHXNA Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_HUCZ_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS HUCZ</value>
        </filters>
        <label>CS HUCZ Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_IT_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS IT</value>
        </filters>
        <label>CS IT Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_NA_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS NA</value>
        </filters>
        <label>CS NA Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_NL_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS NL</value>
        </filters>
        <label>CS NL Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_Orders_NA_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS Orders NA</value>
        </filters>
        <label>CS Orders NA Group</label>
    </listViews>
    <listViews>
        <fullName>HAE_CS_Plasma_NA_Group</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HAE_Case_Group__c</field>
            <operation>equals</operation>
            <value>CS Plasma NA</value>
        </filters>
        <label>CS Plasma NA Group</label>
    </listViews>
    <recordTypes>
        <fullName>HAE_Customer_Service_Claims</fullName>
        <active>true</active>
        <businessProcess>HAE Support Process Customer Service%3A Claims</businessProcess>
        <description>HAE: Case record type for Customer Service Claims</description>
        <label>Customer Service: Claims</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Service_Contract_Request</fullName>
        <active>true</active>
        <businessProcess>HAE Support Process Customer Service%3A Contract Request</businessProcess>
        <description>HAE: Case record type for Customer Service Contract Request.</description>
        <label>Customer Service: Contract Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Service_GHX</fullName>
        <active>true</active>
        <businessProcess>HAE Support Process Customer Service%3A GHX</businessProcess>
        <description>HAE: Case record type for Customer Service GHX.</description>
        <label>Customer Service: GHX</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Service_Inquiry</fullName>
        <active>true</active>
        <businessProcess>HAE Support Process Customer Service%3A Inquiry</businessProcess>
        <description>HAE: Case record type for Customer Service Inquiry.</description>
        <label>Customer Service: Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Service_Order</fullName>
        <active>true</active>
        <businessProcess>HAE Support Process Customer Service%3A Order</businessProcess>
        <description>HAE: Case record type for Customer Service Order.</description>
        <label>Customer Service: Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Service_Service_Request</fullName>
        <active>true</active>
        <businessProcess>HAE Customer Service%3A Service Request</businessProcess>
        <description>HAE: Case record type for Customer Service Service Request.</description>
        <label>Customer Service: Service Request</label>
    </recordTypes>
    <validationRules>
        <fullName>HAE_Reopen_Reason_Required</fullName>
        <active>true</active>
        <description>HAE: When Reopen field is checked then Reopen Reason is mandatory.</description>
        <errorConditionFormula>AND(HAE_Reopen__c = true, ISBLANK(HAE_Reopen_Reason__c))</errorConditionFormula>
        <errorMessage>Reopen Reason is mandatory while Reopen is checked.</errorMessage>
    </validationRules>
</CustomObject>